@@ -16,6 +16,8 @@
  */
 package org.apache.solr.packagemanager;
 
+import static org.apache.solr.client.solrj.util.SolrIdentifierValidator.validateCollectionName;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.jsonpath.Configuration;
 import com.jayway.jsonpath.spi.json.JacksonJsonProvider;
@@ -23,35 +25,34 @@ import com.jayway.jsonpath.spi.json.JsonProvider;
 import com.jayway.jsonpath.spi.mapper.JacksonMappingProvider;
 import com.jayway.jsonpath.spi.mapper.MappingProvider;
 import java.io.IOException;
-import java.net.MalformedURLException;
+import java.io.OutputStream;
 import java.nio.ByteBuffer;
+import java.nio.channels.Channels;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
-import org.apache.commons.io.IOUtils;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.methods.HttpGet;
 import org.apache.lucene.util.SuppressForbidden;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.HttpSolrClient;
-import org.apache.solr.client.solrj.request.V2Request;
-import org.apache.solr.client.solrj.response.V2Response;
+import org.apache.solr.client.solrj.impl.JsonMapResponseParser;
+import org.apache.solr.client.solrj.request.GenericSolrRequest;
+import org.apache.solr.client.solrj.request.RequestWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
+import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.BlobRepository;
-import org.apache.solr.filestore.DistribPackageStore;
-import org.apache.solr.filestore.PackageStoreAPI;
+import org.apache.solr.filestore.DistribFileStore;
+import org.apache.solr.filestore.FileStoreAPI;
 import org.apache.solr.packagemanager.SolrPackage.Manifest;
 import org.apache.solr.util.SolrJacksonAnnotationInspector;
-import org.semver4j.Semver;
 
 public class PackageUtils {
 
@@ -94,29 +95,42 @@ public class PackageUtils {
     if (sig != null) {
       params.add("sig", sig);
     }
-    V2Response rsp =
-        new V2Request.Builder(resource)
-            .withMethod(SolrRequest.METHOD.PUT)
-            .withPayload(buffer)
-            .forceV2(true)
-            .withMimeType("application/octet-stream")
-            .withParams(params)
-            .build()
-            .process(client);
-    if (!name.equals(rsp.getResponse().get(CommonParams.FILE))) {
+    GenericSolrRequest request =
+        new GenericSolrRequest(SolrRequest.METHOD.PUT, resource, params) {
+          @Override
+          public RequestWriter.ContentWriter getContentWriter(String expectedType) {
+            return new RequestWriter.ContentWriter() {
+              public final ByteBuffer payload = buffer;
+
+              @Override
+              public void write(OutputStream os) throws IOException {
+                if (payload == null) return;
+                Channels.newChannel(os).write(payload);
+              }
+
+              @Override
+              public String getContentType() {
+                return "application/octet-stream";
+              }
+            };
+          }
+        };
+    NamedList<Object> rsp = client.request(request);
+    if (!name.equals(rsp.get(CommonParams.FILE))) {
       throw new SolrException(
           ErrorCode.BAD_REQUEST,
           "Mismatch in file uploaded. Uploaded: "
-              + rsp.getResponse().get(CommonParams.FILE)
+              + rsp.get(CommonParams.FILE)
               + ", Original: "
               + name);
     }
   }
 
-  /** Download JSON from the url and deserialize into klass. */
-  public static <T> T getJson(HttpClient client, String url, Class<T> klass) {
+  /** Download JSON from a Solr url and deserialize into klass. */
+  public static <T> T getJson(SolrClient client, String path, Class<T> klass) {
     try {
-      return getMapper().readValue(getJsonStringFromUrl(client, url), klass);
+      return getMapper()
+          .readValue(getJsonStringFromUrl(client, path, new ModifiableSolrParams()), klass);
     } catch (IOException e) {
       throw new RuntimeException(e);
     }
@@ -132,7 +146,7 @@ public class PackageUtils {
       try (ZipFile zipFile = new ZipFile(jarfile.toFile())) {
         ZipEntry entry = zipFile.getEntry(filename);
         if (entry == null) continue;
-        return IOUtils.toString(zipFile.getInputStream(entry), "UTF-8");
+        return new String(zipFile.getInputStream(entry).readAllBytes(), StandardCharsets.UTF_8);
       } catch (Exception ex) {
         throw new SolrException(ErrorCode.BAD_REQUEST, ex);
       }
@@ -140,17 +154,14 @@ public class PackageUtils {
     return null;
   }
 
-  /** Returns JSON string from a given URL */
-  public static String getJsonStringFromUrl(HttpClient client, String url) {
+  /** Returns JSON string from a given Solr URL */
+  public static String getJsonStringFromUrl(SolrClient client, String path, SolrParams params) {
     try {
-      HttpResponse resp = client.execute(new HttpGet(url));
-      if (resp.getStatusLine().getStatusCode() != 200) {
-        throw new SolrException(
-            ErrorCode.NOT_FOUND,
-            "Error (code=" + resp.getStatusLine().getStatusCode() + ") fetching from URL: " + url);
-      }
-      return IOUtils.toString(resp.getEntity().getContent(), "UTF-8");
-    } catch (UnsupportedOperationException | IOException e) {
+      GenericSolrRequest request = new GenericSolrRequest(SolrRequest.METHOD.GET, path, params);
+      request.setResponseParser(new JsonMapResponseParser());
+      NamedList<Object> response = client.request(request);
+      return response.jsonStr();
+    } catch (IOException | SolrServerException e) {
       throw new RuntimeException(e);
     }
   }
@@ -160,13 +171,15 @@ public class PackageUtils {
    * fetching.
    */
   public static Manifest fetchManifest(
-      HttpSolrClient solrClient, String solrBaseUrl, String manifestFilePath, String expectedSHA512)
-      throws MalformedURLException, IOException {
-    String manifestJson =
-        PackageUtils.getJsonStringFromUrl(
-            solrClient.getHttpClient(), solrBaseUrl + "/api/node/files" + manifestFilePath);
+      SolrClient solrClient, String manifestFilePath, String expectedSHA512)
+      throws IOException, SolrServerException {
+    GenericSolrRequest request =
+        new GenericSolrRequest(SolrRequest.METHOD.GET, "/api/node/files" + manifestFilePath);
+    request.setResponseParser(new JsonMapResponseParser());
+    NamedList<Object> response = solrClient.request(request);
+    String manifestJson = (String) response.get("response");
     String calculatedSHA512 =
-        BlobRepository.sha512Digest(ByteBuffer.wrap(manifestJson.getBytes("UTF-8")));
+        BlobRepository.sha512Digest(ByteBuffer.wrap(manifestJson.getBytes(StandardCharsets.UTF_8)));
     if (expectedSHA512.equals(calculatedSHA512) == false) {
       throw new SolrException(
           ErrorCode.UNAUTHORIZED,
@@ -195,28 +208,21 @@ public class PackageUtils {
 
     if (str == null) return null;
     if (defaults != null) {
-      for (String param : defaults.keySet()) {
+      for (Map.Entry<String, String> entry : defaults.entrySet()) {
+        String param = entry.getKey();
         str =
-            str.replaceAll(
-                "\\$\\{" + param + "\\}",
-                overrides.containsKey(param) ? overrides.get(param) : defaults.get(param));
+            str.replace(
+                "${" + param + "}",
+                overrides.containsKey(param) ? overrides.get(param) : entry.getValue());
       }
     }
-    for (String param : overrides.keySet()) {
-      str = str.replaceAll("\\$\\{" + param + "\\}", overrides.get(param));
+    for (Map.Entry<String, String> entry : overrides.entrySet()) {
+      str = str.replace("${" + entry.getKey() + "}", entry.getValue());
     }
-    for (String param : systemParams.keySet()) {
-      str = str.replaceAll("\\$\\{" + param + "\\}", systemParams.get(param));
+    for (Map.Entry<String, String> entry : systemParams.entrySet()) {
+      str = str.replace("${" + entry.getKey() + "}", entry.getValue());
     }
     return str;
-  }
-
-  /**
-   * Compares two versions v1 and v2. Returns negative if v1 isLessThan v2, positive if v1
-   * isGreaterThan v2 and 0 if equal.
-   */
-  public static int compareVersions(String v1, String v2) {
-    return new Semver(v1).compareTo(new Semver(v2));
   }
 
   public static String BLACK = "\u001B[30m";
@@ -255,17 +261,8 @@ public class PackageUtils {
   }
 
   public static String[] validateCollections(String collections[]) {
-    String collectionNameRegex = "^[a-zA-Z0-9_-]*$";
     for (String c : collections) {
-      if (c.matches(collectionNameRegex) == false) {
-        throw new SolrException(
-            ErrorCode.BAD_REQUEST,
-            "Invalid collection name: "
-                + c
-                + ". Didn't match the pattern: '"
-                + collectionNameRegex
-                + "'");
-      }
+      validateCollectionName(c);
     }
     return collections;
   }
@@ -275,8 +272,8 @@ public class PackageUtils {
   }
 
   public static void uploadKey(byte[] bytes, String path, Path home) throws IOException {
-    PackageStoreAPI.MetaData meta = PackageStoreAPI._createJsonMetaData(bytes, null);
-    DistribPackageStore._persistToFile(
+    FileStoreAPI.MetaData meta = FileStoreAPI._createJsonMetaData(bytes, null);
+    DistribFileStore._persistToFile(
         home, path, ByteBuffer.wrap(bytes), ByteBuffer.wrap(Utils.toJSON(meta)));
   }
 }
