@@ -20,8 +20,8 @@ import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
+import java.util.Map;
 import org.apache.lucene.util.BytesRef;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
@@ -340,7 +340,7 @@ public class SkipExistingDocumentsProcessorFactoryTest extends SolrTestCaseJ4 {
     AddUpdateCommand cmd = new AddUpdateCommand(req);
     cmd.setIndexedId(docId);
     cmd.solrDoc = new SolrInputDocument();
-    cmd.solrDoc.addField("last_name", ImmutableMap.of("set", "Smith"));
+    cmd.solrDoc.addField("last_name", Map.of("set", "Smith"));
     assertTrue(AtomicUpdateDocumentMerger.isAtomicUpdate(cmd));
     return cmd;
   }
